@@ -1,3 +1,11 @@
+2012-01-05  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix zero registers core files when built by gcc-4.7.
+	* elf64-x86-64.c: Update copyright year.
+	(elf_x86_64_write_core_note): Remove variables p and size.  Call
+	elfcore_write_note for the local variables.  Remove the final
+	elfcore_write_note call.  Add NOTREACHED comments.
+
 2011-12-21  Ulrich Weigand  <ulrich.weigand@linaro.org>
 
 	* elf32-arm.c (elf32_arm_nabi_grok_psinfo): Fill in core_pid.
